crates/vm/src/snapshots/mu_vm__tests__object_load_keyed-3.snap
---
source: crates/vm/src/tests.rs
expression: snapshot
---
# Input:
v := {}
print ?v["a"]


# Result (success):
none

# Stdout:
none

