crates/vm/src/snapshots/mu_vm__tests__object_load_keyed-4.snap
---
source: crates/vm/src/tests.rs
expression: snapshot
---
# Input:
v := {}
print ?v["a"]
print v["a"]


# Result (error):
[31merror[0m in code: undefined field "a"


# Stdout:
none

