crates/vm/src/snapshots/mu_vm__tests__object_load_keyed-5.snap
---
source: crates/vm/src/tests.rs
expression: snapshot
---
# Input:
v := { a: { b: 10 } }
print ?v["a"]["b"]


# Result (success):
10

# Stdout:
10

