crates/vm/src/snapshots/mu_vm__tests__object_load_keyed-7.snap
---
source: crates/vm/src/tests.rs
expression: snapshot
---
# Input:
v := { a: {} }
print ?v["a"]["b"]


# Func:
function <[[main]]>:
  frame_size: 7
  length: 35
  const (length=3):
    0: "a"
    1: "v"
    2: "b"
  code:
     0 | create_empty_dict 
     1 | store_reg r4
     3 | load_const [0]
     5 | store_reg r5
     7 | create_empty_dict 
     8 | store_reg r6
    10 | load_reg r6
    12 | insert_to_dict r5, r4
    15 | load_reg r4
    17 | store_global [1]
    19 | load_const [2]
    21 | store_reg r6
    23 | load_const [0]
    25 | store_reg r5
    27 | load_global [1]
    29 | load_keyed_opt r5
    31 | load_keyed_opt r6
    33 | print 
    34 | suspend 


# Result (success):
none

# Stdout:
none
