crates/vm/src/snapshots/mu_vm__tests__object_load_keyed.snap
---
source: crates/vm/src/tests.rs
expression: snapshot
---
# Input:
v := {}
print v["a"]


# Func:
function <[[main]]>:
  frame_size: 5
  length: 17
  const (length=2):
    0: "v"
    1: "a"
  code:
     0 | create_empty_dict 
     1 | store_reg r4
     3 | load_reg r4
     5 | store_global [0]
     7 | load_const [1]
     9 | store_reg r4
    11 | load_global [0]
    13 | load_keyed r4
    15 | print 
    16 | suspend 


# Result (error):
[31merror[0m in code: undefined field "a"


# Stdout:

