crates/vm/src/snapshots/mu_vm__tests__object_load_named-2.snap
---
source: crates/vm/src/tests.rs
expression: snapshot
---
# Input:
v := { a: 10 }
print v.a


# Result (success):
10

# Stdout:
10

