crates/vm/src/snapshots/mu_vm__tests__object_load_named-5.snap
---
source: crates/vm/src/tests.rs
expression: snapshot
---
# Input:
v := { a: { b: 10 } }
print ?v.a.b


# Func:
function <[[main]]>:
  frame_size: 8
  length: 39
  const (length=3):
    0: "a"
    1: "b"
    2: "v"
  code:
     0 | create_empty_dict 
     1 | store_reg r4
     3 | load_const [0]
     5 | store_reg r5
     7 | create_empty_dict 
     8 | store_reg r6
    10 | load_const [1]
    12 | store_reg r7
    14 | push_small_int value=10
    19 | insert_to_dict r7, r6
    22 | load_reg r6
    24 | insert_to_dict r5, r4
    27 | load_reg r4
    29 | store_global [2]
    31 | load_global [2]
    33 | load_named_opt [0]
    35 | load_named_opt [1]
    37 | print 
    38 | suspend 


# Result (success):
10

# Stdout:
10
